# innovativeproject-wiki

./: .gitignore  Dockerfile  Dockerfile.OLD  LICENSE  README.md  config.json  docker-compose.yml  package-lock.json
.github/workflows/: Backend.yml  backend-python.yml  black.yml  pylint.yml
backend/: .gitignore  Dockerfile  UserDB.py  main.py  message.py  pylintrc  pyproject.toml  requirements.in  user_db.py
backend/app/: dependencies.py  main.py  pylintrc
backend/app/routers/: auth.py  authorization.py  documents.py  file_handler.py  file_manager.py  files.py  users.py  workspace_manager.py  workspaces.py
backend/app/utils/: message.py  user_db.py  workspace_db.py
backend/data/users/: README.md  database.json
backend/data/workspaces/: info.csv  list.csv
backend/data/workspaces/lnMfVvAUYxTcEyAm/: info.csv
backend/data/workspaces/nalesniki/: info.json
backend/src/: main.py  message.py  user_db.py
backend/tests/: test_message.py
caddy-data/caddy/ocsp/: innodocs.tech-65609bcf  www.innodocs.tech-be5f082
frontend/: .eslintignore  .eslintrc  Caddyfile  Dockerfile  nginx.config  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  AuthenticatedApp.tsx  UnauthenticatedApp.tsx  index.tsx
frontend/src/components/: TextEditor.tsx  TextEditor2.tsx
frontend/src/components/Appbar/: Appbar.styles.ts  Appbar.tsx  styles.ts
frontend/src/components/Sidebar/: ContextMenu.tsx  FileItem.tsx  (+3 more)
frontend/src/contexts/: AppContext.tsx  Cookies.ts
frontend/src/pages/: About.tsx  Editor.tsx  Home.tsx
frontend/src/themes/: theme.ts
(+29 files in other folders)
