[tool.poetry]
name = "InnerDocs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
tinydb = "^4.4.0"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]
pylint = "^2.7.4"
black = "^20.8b1"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
