[tool.poetry]
name = "InnerDocs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
tinydb = "^4.4.0"
pydantic = "^1.8.1"
passlib = "^1.7.4"
python-jose = "^3.2.0"
python-multipart = "^0.0.5"
aiofiles = "^0.6.0"
python-slugify = "^4.0.1"

[tool.poetry.dev-dependencies]
pylint = "^2.7.4"
black = "^20.8b1"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
