[tool.poetry]
name = "InnoDocs"
version = "0.1.0"
description = ""
authors = ["d-kurowski <d.kurowski98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.1"
uvicorn = "^0.13.4"
tinydb = "^4.4.0"
passlib = "^1.7.4"
python-jose = "^3.2.0"
python-multipart = "^0.0.5"
python-slugify = "^5.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b1"
pylint = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
